// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home component on duplicate entry 1`] = `
<div>
  <div
    className="navbar"
  >
    <link
      href="https://fonts.googleapis.com/css?family=Bangers&display=swap"
      rel="stylesheet"
    />
    <link
      href="https://fonts.googleapis.com/css?family=Bangers|Bowlby+One+SC&display=swap"
      rel="stylesheet"
    />
    <h2>
      My Weather
    </h2>
  </div>
  <main>
    <div
      className="bg"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="w-header"
        >
          <h1>
            My Weather
          </h1>
        </div>
        <div
          className="changes"
        >
          <p>
            The current weather for your favorite cities!
          </p>
        </div>
        <div
          className="changes"
        />
        <div
          className="changes"
        >
          <p>
            City Already Exist
          </p>
        </div>
        <div
          className="flex"
        >
          <input
            onChange={[Function]}
            placeholder="New city name..."
            required={true}
            type="text"
            value=""
          />
          <button
            className="btn"
            color="primary"
          >
            Add City
          </button>
        </div>
      </form>
    </div>
  </main>
  <div
    className="select"
  >
    <li>
      Select a city.
    </li>
  </div>
  <div
    className="cities"
  >
    <ul>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          New York
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Oklahoma
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Toronto
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Seattle
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          dallas
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
    </ul>
  </div>
  <div />
</div>
`;

exports[`Home component on invalid search 1`] = `
<div>
  <div
    className="navbar"
  >
    <link
      href="https://fonts.googleapis.com/css?family=Bangers&display=swap"
      rel="stylesheet"
    />
    <link
      href="https://fonts.googleapis.com/css?family=Bangers|Bowlby+One+SC&display=swap"
      rel="stylesheet"
    />
    <h2>
      My Weather
    </h2>
  </div>
  <main>
    <div
      className="bg"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="w-header"
        >
          <h1>
            My Weather
          </h1>
        </div>
        <div
          className="changes"
        >
          <p>
            The current weather for your favorite cities!
          </p>
        </div>
        <div
          className="changes"
        >
          <p>
            invalid search
          </p>
        </div>
        <div
          className="changes"
        >
          <p>
            City Already Exist
          </p>
        </div>
        <div
          className="flex"
        >
          <input
            onChange={[Function]}
            placeholder="New city name..."
            required={true}
            type="text"
            value=""
          />
          <button
            className="btn"
            color="primary"
          >
            Add City
          </button>
        </div>
      </form>
    </div>
  </main>
  <div
    className="select"
  >
    <li>
      Select a city.
    </li>
  </div>
  <div
    className="cities"
  >
    <ul>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          New York
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Oklahoma
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Toronto
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Seattle
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          dallas
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
    </ul>
  </div>
  <div />
</div>
`;

exports[`Home component with initial data 1`] = `
<div>
  <div
    className="navbar"
  >
    <link
      href="https://fonts.googleapis.com/css?family=Bangers&display=swap"
      rel="stylesheet"
    />
    <link
      href="https://fonts.googleapis.com/css?family=Bangers|Bowlby+One+SC&display=swap"
      rel="stylesheet"
    />
    <h2>
      My Weather
    </h2>
  </div>
  <main>
    <div
      className="bg"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="w-header"
        >
          <h1>
            My Weather
          </h1>
        </div>
        <div
          className="changes"
        >
          <p>
            The current weather for your favorite cities!
          </p>
        </div>
        <div
          className="changes"
        />
        <div
          className="changes"
        />
        <div
          className="flex"
        >
          <input
            onChange={[Function]}
            placeholder="New city name..."
            required={true}
            type="text"
            value=""
          />
          <button
            className="btn"
            color="primary"
          >
            Add City
          </button>
        </div>
      </form>
    </div>
  </main>
  <div
    className="select"
  >
    <li>
      Select a city.
    </li>
  </div>
  <div
    className="cities"
  >
    <ul>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          New York
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Oklahoma
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Toronto
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Seattle
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="ct"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          dallas
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
    </ul>
  </div>
  <div />
</div>
`;
